Fix custom scrollbar

--- a/user-scripts/@modules/modules/general-custom-scrollbar/custom-scrollbar.css
+++ b/user-scripts/@modules/modules/general-custom-scrollbar/custom-scrollbar.css
@@ -12,9 +12,9 @@
   specified by YouTube to allow `::-webkit-scrollbar` to work.
 */
 :root, * {
-  scrollbar-width: auto;
-  scrollbar-color: auto;
-  scrollbar-gutter: auto;
+  scrollbar-width: auto !important;
+  scrollbar-color: auto !important;
+  scrollbar-gutter: auto !important;
 }
 
 
